[projectfirma/#1302] Add custom rich text footer Removed some padding on the bottom of containers to make the custom footer flow better Fixed wrapping of some labels on the tenant detail page

--- a/Source/ProjectFirma.Web/Content/Bootstrap/firma/peakstopeople.theme.less
+++ b/Source/ProjectFirma.Web/Content/Bootstrap/firma/peakstopeople.theme.less
@@ -91,7 +91,6 @@ h4 {
 .firmaContent {
     background-color: @firma-contentBackground-color;
     border: 1px solid @firma-contentBorder-color;
-    padding-bottom: 20px;
 }
 
 label, .modal-title {
@@ -110,6 +109,9 @@ label, .modal-title {
     border-left: none;
 }
 
+hr {
+    border-top-color: #ccc;
+}
 
 // Header
 
